Fix shopping cart button overlapping with open language menu.
#54

--- a/sources/stylesheets/main.scss
+++ b/sources/stylesheets/main.scss
@@ -851,9 +851,9 @@ $flags:
 /* langmenu */
 .lang-menu {
   position: absolute;
-  z-index: 200;
   top: 38px;
   left: 30px;
+  z-index: 55001;
   height: 13px;
 
   li {
